--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
   "name": "affitto",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.9.12",
     "color-alpha": "^1.1.3",
-    "expo": "~46.0.9",
-    "expo-blur": "~11.2.0",
-    "expo-font": "~10.2.0",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-native": "0.69.5",
+    "expo": "~48.0.18",
+    "expo-blur": "~12.2.2",
+    "expo-font": "~11.1.1",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-native": "0.71.8",
     "react-native-eva-icons": "^1.3.1",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-svg": "12.3.0"
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-shared-element": "^0.8.8",
+    "react-native-svg": "13.4.0",
+    "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "^18.0.18",
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.27",
     "@types/react-native": "^0.69.6",
-    "typescript": "^4.8.2"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
